# price-forecast

./: .gitignore  README.md  environment.yml  pyproject.toml
src/price_forecast/: config.py
src/price_forecast/data_sources/: dam.py  entsoe.py  weather.py
src/price_forecast/datasets/: daily_sequence.py  daily_sequence_depr_2.py
src/price_forecast/models/: lstm_seq2seq.py  lstm_seq2seq_plus.py
src/price_forecast/pipeline/: dataset_builder.py
src/price_forecast/utils/: interpolate.py  merge.py  relative.py  time_axis.py
tests/: best_lstm.keras  test_package copy.ipynb  test_package-standalone.ipynb  test_package.ipynb
